@@ -6,116 +6,156 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>823</height>
+    <width>396</width>
+    <height>857</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_5">
-   <item row="0" column="0">
-    <widget class="QGroupBox" name="m_pGroupScope">
+   <item row="1" column="0">
+    <widget class="QLabel" name="m_labelAdminRightsMessage">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>To edit settings for all users, Admin privileges are required.</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QGroupBox" name="m_pGroupAdvanced">
      <property name="font">
       <font>
        <kerning>true</kerning>
       </font>
      </property>
      <property name="title">
-      <string>Use &amp;settings profile from:</string>
+      <string>&amp;Miscellaneous</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_4">
+     <layout class="QGridLayout" name="gridLayout_3">
       <item row="1" column="0">
-       <widget class="QRadioButton" name="m_pRadioSystemScope">
+       <widget class="QLabel" name="m_pLabel_20">
         <property name="text">
-         <string>All users</string>
+         <string>P&amp;ort:</string>
         </property>
-        <property name="checked">
+        <property name="buddy">
+         <cstring>m_pSpinBoxPort</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="m_pLabel_19">
+        <property name="minimumSize">
+         <size>
+          <width>75</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Sc&amp;reen name:</string>
+        </property>
+        <property name="buddy">
+         <cstring>m_pLineEditScreenName</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QComboBox" name="m_pComboElevate">
+        <property name="toolTip">
+         <string>Specify when the Synergy service should run at an elevated privilege level</string>
+        </property>
+        <property name="currentIndex">
+         <number>0</number>
+        </property>
+        <item>
+         <property name="text">
+          <string>As Needed</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Always</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Never</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="m_pLineEditScreenName">
+        <property name="enabled">
          <bool>true</bool>
         </property>
        </widget>
       </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="m_pLabelElevate">
+        <property name="text">
+         <string>Elevate</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QCheckBox" name="m_pCheckBoxMinimizeToTray">
+        <property name="text">
+         <string>Minimize to System &amp;Tray</string>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="1">
-       <widget class="QRadioButton" name="m_pRadioUserScope">
-        <property name="text">
-         <string>Current user</string>
+       <widget class="QSpinBox" name="m_pSpinBoxPort">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximum">
+         <number>65535</number>
+        </property>
+        <property name="value">
+         <number>24800</number>
         </property>
        </widget>
       </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="10" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="0">
-    <widget class="QGroupBox" name="m_pGroupBoxTLS">
-     <property name="font">
-      <font>
-       <kerning>true</kerning>
-      </font>
-     </property>
-     <property name="title">
-      <string>TLS/SSL Settings</string>
-     </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="m_pLineEditCertificatePath"/>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="m_pLabel_29">
+      <item row="2" column="0">
+       <widget class="QLabel" name="m_pLabel_21">
         <property name="text">
-         <string>Key length</string>
+         <string>&amp;Interface:</string>
+        </property>
+        <property name="buddy">
+         <cstring>m_pLineEditInterface</cstring>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="m_pLabel_30">
+      <item row="5" column="0">
+       <widget class="QCheckBox" name="m_pCheckBoxAutoHide">
         <property name="text">
-         <string>Certificate Path</string>
+         <string>&amp;Hide on startup</string>
         </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QPushButton" name="m_pPushButtonBrowseCert">
-        <property name="text">
-         <string>Browse</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" colspan="2">
-       <widget class="QComboBox" name="m_pComboBoxKeyLength">
-        <property name="currentText">
-         <string>1024</string>
-        </property>
-        <item>
-         <property name="text">
-          <string>1024</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>2048</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>4096</string>
-         </property>
-        </item>
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QPushButton" name="m_pPushButtonRegenCert">
-        <property name="text">
-         <string>Regenerate Cert</string>
+       <widget class="QLineEdit" name="m_pLineEditInterface">
+        <property name="enabled">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -129,22 +169,6 @@
      </property>
      <property name="sizeType">
       <enum>QSizePolicy::Minimum</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>10</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="9" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::MinimumExpanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -254,6 +278,12 @@
           <property name="enabled">
            <bool>false</bool>
           </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Enable Auto Config</string>
           </property>
@@ -274,86 +304,48 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QGroupBox" name="m_pGroupAdvanced">
+   <item row="0" column="0">
+    <widget class="QGroupBox" name="m_pGroupScope">
      <property name="font">
       <font>
        <kerning>true</kerning>
       </font>
      </property>
      <property name="title">
-      <string>&amp;Miscellaneous</string>
+      <string>Use &amp;settings profile from:</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3">
+     <layout class="QGridLayout" name="gridLayout_4">
       <item row="1" column="0">
-       <widget class="QLabel" name="m_pLabel_19">
-        <property name="minimumSize">
-         <size>
-          <width>75</width>
-          <height>0</height>
-         </size>
-        </property>
+       <widget class="QRadioButton" name="m_pRadioSystemScope">
         <property name="text">
-         <string>Sc&amp;reen name:</string>
+         <string>All users</string>
         </property>
-        <property name="buddy">
-         <cstring>m_pLineEditScreenName</cstring>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="m_pLineEditScreenName">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="m_pLabel_20">
+       <widget class="QRadioButton" name="m_pRadioUserScope">
         <property name="text">
-         <string>P&amp;ort:</string>
-        </property>
-        <property name="buddy">
-         <cstring>m_pSpinBoxPort</cstring>
+         <string>Current user</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QSpinBox" name="m_pSpinBoxPort">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="maximum">
-         <number>65535</number>
-        </property>
-        <property name="value">
-         <number>24800</number>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="m_pLabel_21">
-        <property name="text">
-         <string>&amp;Interface:</string>
-        </property>
-        <property name="buddy">
-         <cstring>m_pLineEditInterface</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="m_pLineEditInterface">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="10" column="0">
+    <widget class="QGroupBox" name="gridGroupBox">
+     <property name="font">
+      <font>
+       <kerning>true</kerning>
+      </font>
+     </property>
+     <property name="title">
+      <string>Advanced</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_7">
       <item row="0" column="0">
        <widget class="QLabel" name="m_pLabel_27">
         <property name="sizePolicy">
@@ -379,54 +371,91 @@
       <item row="0" column="1">
        <widget class="QComboBox" name="m_pComboLanguage"/>
       </item>
-      <item row="4" column="1">
-       <widget class="QComboBox" name="m_pComboElevate">
-        <property name="toolTip">
-         <string>Specify when the Synergy service should run at an elevated privilege level</string>
+     </layout>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <widget class="QGroupBox" name="m_pGroupBoxTLS">
+     <property name="font">
+      <font>
+       <kerning>true</kerning>
+      </font>
+     </property>
+     <property name="title">
+      <string>TLS/SSL Settings</string>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="m_pLineEditCertificatePath"/>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="m_pLabel_29">
+        <property name="text">
+         <string>Key length</string>
         </property>
-        <property name="currentIndex">
-         <number>0</number>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="m_pLabel_30">
+        <property name="text">
+         <string>Certificate Path</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QPushButton" name="m_pPushButtonBrowseCert">
+        <property name="text">
+         <string>Browse</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" colspan="2">
+       <widget class="QComboBox" name="m_pComboBoxKeyLength">
+        <property name="currentText">
+         <string>1024</string>
         </property>
         <item>
          <property name="text">
-          <string>As Needed</string>
+          <string>1024</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>Always</string>
+          <string>2048</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>Never</string>
+          <string>4096</string>
          </property>
         </item>
        </widget>
       </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="m_pLabelElevate">
+      <item row="2" column="1">
+       <widget class="QPushButton" name="m_pPushButtonRegenCert">
         <property name="text">
-         <string>Elevate</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
-       <widget class="QCheckBox" name="m_pCheckBoxAutoHide">
-        <property name="text">
-         <string>&amp;Hide on startup</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="0">
-       <widget class="QCheckBox" name="m_pCheckBoxMinimizeToTray">
-        <property name="text">
-         <string>Minimize to System &amp;Tray</string>
+         <string>Regenerate Cert</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
+   </item>
+   <item row="9" column="0">
+    <spacer name="verticalSpacer_5">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Minimum</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="8" column="0">
     <widget class="QGroupBox" name="m_pGroupLog">
@@ -518,25 +547,37 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="m_labelAdminRightsMessage">
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+   <item row="12" column="0">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <property name="text">
-      <string>To edit settings for all users, Admin privileges are required.</string>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
      </property>
     </widget>
+   </item>
+   <item row="11" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::MinimumExpanding</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>10</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>m_pRadioSystemScope</tabstop>
   <tabstop>m_pRadioUserScope</tabstop>
-  <tabstop>m_pComboLanguage</tabstop>
   <tabstop>m_pLineEditScreenName</tabstop>
   <tabstop>m_pSpinBoxPort</tabstop>
   <tabstop>m_pLineEditInterface</tabstop>
